Fix view-types images stretching on Safari

--- a/src/App.scss
+++ b/src/App.scss
@@ -764,7 +764,7 @@ input {
 
     img {
       width: 100%;
-      height: auto;
+      align-self: flex-start;
     }
   }
 }
